[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-tx"
version = "0.1.0"
description = "MCP-Tx: A reliability layer for MCP tool calls with human-in-the-loop support"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "MCP-Tx Development Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.14",
    "anyio>=4.9.0",
    "openai>=1.97.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",
    "streamlit>=1.47.0",
]

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/Daku-on/MCP-Tx"
Repository = "https://github.com/Daku-on/MCP-Tx/mcp-tx-python"
Documentation = "https://docs.mcp-tx.dev"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_tx"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "RUF", # ruff-specific rules
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
]
anyio_backends = ["asyncio"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
    "trio>=0.30.0",
]
